--- a/Packages/com.from2001.upmtest2/package.json
+++ b/Packages/com.from2001.upmtest2/package.json
@@ -1,10 +1,11 @@
 {
   "name": "com.from2001.upmtest2",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "displayName": "upmtest2",
   "unity": "2022.3",
   "description": "UPM-Test",
   "dependencies": {
-    "com.unity.nuget.newtonsoft-json": "3.2.1"
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "org.kumas.nuget-importer": "4.0.0"
   }
 }
