--- a/Packages/com.from2001.upmtest2/package.json
+++ b/Packages/com.from2001.upmtest2/package.json
@@ -10,5 +10,12 @@
   "gitDependencies": {
     "jp.rarafy.openjtalk_for_unity": "https://github.com/rarafy/OpenJTalkForUnity.git?path=_Project/Packages/OpenJTalkForUnity",
     "com.coffee.git-dependency-resolver": "https://github.com/mob-sakai/GitDependencyResolverForUnity.git"
-  }
+  },
+  "samples": [
+    {
+      "displayName": "Sample1",
+      "description": "Sample1",
+      "path": "Samples/Sample1"
+    }
+  ]
 }
