--- a/Packages/com.from2001.upmtest2/package.json
+++ b/Packages/com.from2001.upmtest2/package.json
@@ -6,7 +6,8 @@
   "description": "UPM-Test",
   "dependencies": {
     "com.unity.nuget.newtonsoft-json": "3.2.1",
-    "com.vrmc.vrm": "0.115.0"
+    "com.vrmc.vrm": "0.115.0",
+    "com.unity.render-pipelines.universal": "14.0.9"
   },
   "gitDependencies": {
     "jp.rarafy.openjtalk_for_unity": "https://github.com/rarafy/OpenJTalkForUnity.git?path=_Project/Packages/OpenJTalkForUnity",
